--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: minimal
 services:
   - docker
 
+before_script:
+  - chmod +x ./setup_env.sh
+  - ./setup_env.sh
+  - cp .env udagram-api-feed/
+  - cp .env udagram-api-users/
+
 script:
   - docker-compose -f deploy/docker/docker-compose-build.yaml build --parallel  
 
