--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_script:
-  - chmod +x ./setup_env.sh
-  - ./setup_env.sh
+  - chmod +x ./set_env.sh
+  - ./set_env.sh
   - cp .env udagram-api-feed/
   - cp .env udagram-api-users/
 
